service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
  labels:
    app: nodejs-app
spec:
  selector:
    app: nodejs-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
